# siclo-scraping

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: dataframes.py  db_utils.py  drive_uploader.py  generate_refresh_token.py  llm.py  scrape.py  sitemap_utils.py
